# handlers/auth/handler.go
@@ -133,26 +133,6 @@ func (h *authHandler) Logout(c *gin.Context) {
 	res.Succes(c)
 }
 
-// Logout godoc
-// @Summary User
-// @Description AuthenticatedUser
-// @Tags auth
-// @Accept json
-// @Produce json
-// @Success 200 {object} res.SuccessResponse
-// @Response 403 {object} res.ErrorResponse{error=errs.ForbiddenError}
-// @Router /auth/user [get]
-func (h *authHandler) User(c *gin.Context) {
-	user, _ := c.Get("User")
-
-	// if !exists {
-	// 	res.Error(c, errs.Forbidden)
-	// 	return
-	// }
-
-	res.SuccessWithData(c, user)
-}
-
 func (h *authHandler) setAuthCookies(c *gin.Context, pair *auth_dto.TokensPairDto, exp *auth_dto.TokensPairExpirationDto) {
 
 	at := &http.Cookie{
@@ -160,7 +140,7 @@ func (h *authHandler) setAuthCookies(c *gin.Context, pair *auth_dto.TokensPairDt
 		Value:    pair.AccessToken,
 		MaxAge:   exp.AccessTokenExpiration,
 		Path:     "/",
-		Domain:   "",
+		Domain:   ".tega.local",
 		Secure:   false,
 		HttpOnly: true,
 	}
@@ -170,7 +150,7 @@ func (h *authHandler) setAuthCookies(c *gin.Context, pair *auth_dto.TokensPairDt
 		Value:    pair.RefreshToken,
 		MaxAge:   exp.RefreshTokenExpiration,
 		Path:     "/",
-		Domain:   "",
+		Domain:   ".tega.local",
 		Secure:   false,
 		HttpOnly: true,
 	}
