# server/gin_server.go
@@ -10,6 +10,7 @@ import (
 	_ "github.com/ddan1l/tega-backend/docs"
 	"github.com/ddan1l/tega-backend/factory"
 	auth_handler "github.com/ddan1l/tega-backend/handlers/auth"
+	user_handler "github.com/ddan1l/tega-backend/handlers/user"
 	"github.com/ddan1l/tega-backend/middleware"
 	"github.com/gin-gonic/gin"
 	swaggerFiles "github.com/swaggo/files"
@@ -43,30 +44,48 @@ func (s *ginServer) Start() {
 	s.app.Use(middleware.CORSMiddleware())
 
 	if os.Getenv("ENV") != "production" {
-		s.app.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
+		s.app.GET("/api/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 	}
 
+	s.initializeHandlers()
+
+	s.app.Run(fmt.Sprintf(":%d", s.conf.Server.Port))
+}
+
+func (s *ginServer) initializeHandlers() {
+	// Public routes
+	s.initializeAuthHandler()
+
+	// Below Protected routes
 	authMiddleware := middleware.NewAuthMiddleware(
 		s.factory.CreateAuthUseCase(),
 	)
 
-	s.initializeAuthHandler(authMiddleware)
+	s.app.Use(authMiddleware.Middleware())
 
-	serverUrl := fmt.Sprintf(":%d", s.conf.Server.Port)
-	s.app.Run(serverUrl)
+	s.initializeUserHandler()
 }
 
-func (s *ginServer) initializeAuthHandler(authMiddleware middleware.AuthMiddleware) {
+func (s *ginServer) initializeAuthHandler() {
 	authHandler := auth_handler.NewAuthHandler(
 		s.factory.CreateAuthUseCase(),
 	)
 
-	g := s.app.Group("/auth")
+	g := s.app.Group("/api/auth")
 
 	g.POST("/register", authHandler.Register)
 	g.POST("/login", authHandler.Login)
 	g.POST("/logout", authHandler.Logout)
 
-	s.app.Use(authMiddleware.Middleware())
-	s.app.GET("/auth/user", authHandler.User)
+}
+
+func (s *ginServer) initializeUserHandler() {
+	userHandler := user_handler.NewUserHandler(
+		s.factory.CreateUserhUseCase(),
+	)
+
+	g := s.app.Group("/api/user")
+
+	g.GET("/", userHandler.User)
+	g.GET("/projects", userHandler.UserProjects)
 }
